--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/919db5d72a.js" crossorigin="anonymous"></script>
   
   <!-- style.css -->
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
   
   <!-- Google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
