--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   
   <title>OSAKO balai kubo-private resort</title>
   <script src="https://kit.fontawesome.com/919db5d72a.js" crossorigin="anonymous"></script>
+  <!-- リセットCSS -->
+  <link rel="stylesheet" href="https://uillu2416.github.io/balaikubo/destyle.css"/>
   
   <!-- style.css -->
   <link rel="stylesheet" href="https://uillu2416.github.io/balaikubo/style.css"/>
