--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="hero" class="container">
       <div class="hero_inner">
         <p class="pop">サンプルサンプルサンプル</p>
-        <h1>sampulesampulesampule</h1>
+        <h1>samplesamplesample</h1>
       </div>
     </section>
     <section id="Concept" class="container">
